# EscapeAnalysisTest

./: .clang-format  CMakeLists.txt  EscapeAnalysisGlobalTest.c  EscapeAnalysisTest.c  NewTests.cpp  TSanTest.c  TSanTest.cpp  bench.h  main.c  test.h
utils/: build_and_run_for_compare.sh
